--- a/index_pt.html
+++ b/index_pt.html
@@ -70,12 +70,24 @@
 
     <header>
         <div class="language-selector">
-          <select id="language">
-            <option value="pt">Português</option>
-            <option value="zh">中文</option>
-            <option value="en">English</option>
-            <option value="es">Español</option>
-          </select>
+            <span class="material-symbols-outlined">
+                language
+            </span>
+            <nav>
+                <ul>
+                  <li class="dropdown">
+                    <a href="#" class="dropbtn" id="current-language">
+                        Choose Language
+                    </a>
+                    <div class="dropdown-content">
+                      <a href="index.html">中文</a>
+                      <a href="index_en.html">English</a>
+                      <a href="index_es.html">Español</a>
+                      <a href="index_pt.html">Português</a>
+                    </div>
+                  </li>
+                </ul>
+              </nav>
         </div>
     </header>
 
