modified:   index.html 	modified:   index_en.html 	modified:   index_es.html 	modified:   index_pt.html 	modified:   main.js 	modified:   style.css 	modified:   style_preset.css

--- a/index_en.html
+++ b/index_en.html
@@ -93,7 +93,7 @@
     </header>
 
     <!-- 导航栏区域 -->
-    <div id="chaper-1-header" class="text-center header shadow-box hidden">
+    <div id="chaper-1-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
             <h4 class="m-auto">Preface | International Students in China: Cultural "Cross-Border" Envoys</h4>
         </div>
@@ -104,7 +104,7 @@
         </div>
     </div>
 
-    <div id="chaper-2-header" class="text-center header shadow-box hidden">
+    <div id="chaper-2-header" class="text-center header shadow-box invisible">
         <div class "desktop-content">
             <h4 class="m-auto">Chapter 2 | International Students in China and Cultural Adaptation</h4>
         </div>
@@ -114,7 +114,7 @@
         </div>
     </div>
 
-    <div id="chaper-3-header" class="text-center header shadow-box hidden">
+    <div id="chaper-3-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
             <h4 class="m-auto">Chapter 3 | International Students in China and Cultural Communication</h4>
         </div>
@@ -125,7 +125,7 @@
         </div>
     </div>
 
-    <div id="chaper-4-header" class="text-center header shadow-box hidden">
+    <div id="chaper-4-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
             <h4 class="m-auto">Chapter 4 | Outlook</h4>
         </div>
@@ -956,14 +956,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
@@ -979,14 +979,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
@@ -1002,14 +1002,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
@@ -1025,14 +1025,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
