--- a/index_pt.html
+++ b/index_pt.html
@@ -92,7 +92,7 @@
     </header>
 
     <!-- Área da barra de navegação -->
-    <div id="chaper-1-header" class="text-center header shadow-box hidden">
+    <div id="chaper-1-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
             <h4 class="m-auto">Prefácio | Estudantes Internacionais na China: Embaixadores da Cultura</h4>
         </div>
@@ -103,7 +103,7 @@
         </div>
     </div>
 
-    <div id="chaper-2-header" class="text-center header shadow-box hidden">
+    <div id="chaper-2-header" class="text-center header shadow-box invisible">
         <div "desktop-content">
             <h4 class="m-auto">Capítulo Dois | Estudantes Internacionais na China e Adaptação Cultural</h4>
         </div>
@@ -113,7 +113,7 @@
         </div>
     </div>
 
-    <div id="chaper-3-header" class="text-center header shadow-box hidden">
+    <div id="chaper-3-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
             <h4 class="m-auto">Capítulo Três | Estudantes Internacionais na China e Interação Cultural</h4>
         </div>
@@ -123,7 +123,7 @@
         </div>
     </div>
 
-    <div id="chaper-4-header" class="text-center header shadow-box hidden">
+    <div id="chaper-4-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
             <h4 class="m-auto">Capítulo Quatro | Perspectivas</h4>
         </div>
@@ -943,14 +943,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
@@ -966,14 +966,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
@@ -989,14 +989,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
@@ -1012,14 +1012,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
