--- a/index_es.html
+++ b/index_es.html
@@ -93,7 +93,7 @@
     </header>
 
     <!-- Área de la barra de navegación -->
-    <div id="chaper-1-header" class="text-center header shadow-box hidden">
+    <div id="chaper-1-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
             <h4 class="m-auto">Prólogo | Estudiantes internacionales en China: Embajadores de la cultura
                 "transfronteriza"</h4>
@@ -105,7 +105,7 @@
         </div>
     </div>
 
-    <div id="chaper-2-header" class="text-center header shadow-box hidden">
+    <div id="chaper-2-header" class="text-center header shadow-box invisible">
         <div "desktop-content">
             <h4 class="m-auto">Capítulo 2 | Estudiantes internacionales en China y su adaptación cultural</h4>
         </div>
@@ -116,7 +116,7 @@
         </div>
     </div>
 
-    <div id="chaper-3-header" class="text-center header shadow-box hidden">
+    <div id="chaper-3-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
             <h4 class="m-auto">Capítulo 3 | Estudiantes internacionales en China y la comunicación cultural</h4>
         </div>
@@ -127,7 +127,7 @@
         </div>
     </div>
 
-    <div id="chaper-4-header" class="text-center header shadow-box hidden">
+    <div id="chaper-4-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
             <h4 class="m-auto">Capítulo 4 | Perspectivas</h4>
         </div>
@@ -1000,14 +1000,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
@@ -1023,14 +1023,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
@@ -1046,14 +1046,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
@@ -1069,14 +1069,14 @@
 
         // 当滚动到目标元素的顶部时显示标题栏
         if (targetElementRect.bottom <= 0) {
-            header.classList.remove('hidden');
+            header.classList.remove('invisible');
         } else {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
 
         // 当滚动到目标元素的底部时隐藏标题栏
         if (bottomElementRect.bottom <= 0) {
-            header.classList.add('hidden');
+            header.classList.add('invisible');
         }
     });
 </script>
