--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <div class="title">
         <div class="headerbtn-block">
             <div class="goto">
+                <h1 class="header-h1">Study in China</h1>
                 <span class="material-symbols-outlined">
                     note_stack
                 </span>
