modified:   index.html

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </li>
         </div>
         <div class="goto">
-            <h1 class="header-h1">Study in China</h1>
+            <h1 class="header-h1">Study in Beijing</h1>
             <span class="material-symbols-outlined">
                 note_stack
             </span>
