modified:   data/area.js 	modified:   data/continent-2022-treemap-sunburst.js 	new file:   data/trend.js 	modified:   index.html 	modified:   style_preset.css

--- a/index.html
+++ b/index.html
@@ -221,36 +221,36 @@
 
             </div>
             <div class="col-12" data-aos="fade-up" data-aos-duration="1100">
-                <div class="section-title text-center">
+                <div class="text-center">
                     <span class="d-flex justify-content-center"></span>
-                    <!-- 电脑端内容 -->
-                    <div class="desktop-content">
-                        <p class="m-auto line-height-3">
-                            根据中国政府网数据，截至2021年底，我国共有来自214个国家和地区的25.5万名在华留学生，其中亚洲国家占比最高，达到65.3%。
-                        </p>
-                    </div>
-                    <!-- 手机端内容 -->
-                    <div class="mobile-content">
-                        <p class="m-auto line-height-3">
-                            根据中国政府网数据，截至2021年底，我国共有来自214个国家和地区的25.5万名在华留学生，其中亚洲国家占比最高，达到65.3%。
-                        </p>
-                    </div>
+                    <p class="m-auto line-height-3">
+                        截至2022年底，我国共有来自214个国家和地区的25.5万名在华留学生。
+                    </p>
                 </div>
                 <!-- 条形图 -->
-                <div class="col-md-6 chart-center" id="container-area"></div>
-
-                <!-- Echarts条形图测试 -->
-                <div class="col-md-6 chart-center" id="0c90bacd622c4e2d8ecfd557e554b189"></div>
-                <!-- Plotly环形图测试-->
-                <div class="col-md-6 chart-center" id="6adaae60-86bc-4dd5-afdc-e3259cb6a757"></div>
-                <div class="section-title text-center">
+                <div class="col-md-6 chart-center" id="container-trend"></div>
+                <div class="text-margin-bottom text-center">
                     <p class="small m-auto line-height-3">
-                        数据来源：《中国教育统计年鉴》（2016-2022）
+                        数据来源：《中国教育统计年鉴》（2012-2022）
+                    </p>
+                </div>
+                <div class="text-center">
+                    <p class="m-auto line-height-3">
+                        其中亚洲国家占比最高，达到66.9%。
+                    </p>
+                    <p class="m-auto line-height-3">
+                        其次为非洲，占比为22.5%，<br />成为既亚洲之外的第二大来华留学输出地。
+                    </p>
+                </div>
+                <div class="col-md-6 chart-center" id="container-treemap"></div>
+                <div class="text-margin-bottom text-center">
+                    <p class="small m-auto line-height-3">
+                        数据来源：《中国教育统计年鉴》（2022）
                     </p>
                 </div>
                 <div class="section-title text-center">
                     <p class="m-auto line-height-3">
-                        我国一直以来都欢迎世界各地的留学生来华学习，我们对留学生提供了一系列的优惠政策，包括奖学金、简化签证手续、扩大就业范围等。随着我国国际地位的不断提高，来华留学生的数量也在逐年增加。在华留学生在享受我国提供的便利的同时，也需要适应我国的文化和生活方式，这是一个双向的过程，也是世界了解我国的一个重要途径。
+                        我国一直以来都欢迎世界各地的留学生来华学习，我们对留学生提供了一系列的优惠政策，包括奖学金、简化签证手续、扩大就业范围等。如教育部《关于规范我高等学校接受国际学生有关工作的通知》等，均为国际学生进入中国高等院校本专科阶段学习提供了良好的政策。随着我国国际地位的不断提高，来华留学生的数量也在逐年增加。在华留学生在享受我国提供的便利的同时，也需要适应我国的文化和生活方式，这是一个双向的过程，也是世界了解我国的一个重要途径。
                     </p>
                 </div>
             </div>
@@ -649,51 +649,36 @@
             <!-- 正文 -->
             <div class="col-12 section-title text-center" style="padding-top: 0px;" data-aos="fade-up"
                 data-aos-duration="1100">
-                <!-- 电脑端内容 -->
-                <div class="desktop-content">
-                    <p class="m-auto line-height-3">
-                        随着全球疫情的逐渐控制，在华留学生的生活也将逐渐恢复正常。
-                        在疫情期间，很多留学生不得不在自己的国家进行线上学习，与老师和同学们进行远程交流。这种形式的交流虽然能够维持学习的进行，但是却无法取代面对面的交流和互动。
-
-                        在全球疫情逐渐受到控制的背景下，对于在华留学生而言，生活正逐渐恢复正常。于此同时，在此过程中，我们必须认识到在来华留学生在重返线下，回到校园所经历的挑战与困难。
-
-                        观之于此，首先需关注留学生在华学习和生活中所面临的实际问题。诸如留学生在华期间所面临的身份认证、银行开户、网络支付绑卡等问题仍阻扰着在华留学生的生活环境。
-                        对于现在可以返回线下交流的留学生而言，这是一个重要的转折点。但于此同时也遇到了相应的困难，支付认证、社交平台、
-                        政协常委贾庆国在今年两会上提出的相关建议，其在《关于加大吸引外国学生来华学习力度的提案》和《关于鼓励民间对外讲好中国故事工作的提案》中提及，在讨论外国学生在华学习和生活的实际问题时提出了相关建议。
-                        他强调，外国留学生在华期间遇到的诸如身份认证、银行开户、网络支付绑卡等困难亟需解决，以优化他们的学习和生活环境。
-
-
-                        另需言之，在后疫情时代，我们希望在华留学生能够更加积极地参与到跨文化交际中来。在学习和生活中，他们可以主动与来自不同国家和地区的人交流，了解不同的文化和思维方式。这不仅可以拓宽视野，还可以提高跨文化交际的能力。
-                        同时，我们希望留学生们能够借助疫情期间的经验，探索新的跨文化交际方式。
-                        例如，可以通过线上交流平台，组织跨文化交流活动，让更多人参与到其中来。还可以利用社交媒体等工具，建立跨文化的社群，促进不同文化之间的交流和互动。
-                        在跨文化交际领域，我们还需要加强对留学生的心理支持和辅导。很多留学生面临着各种压力和挑战，如孤独、焦虑、抑郁等。因此，需要提供适当的心理支持和辅导，帮助他们更好地适应新环境，缓解压力和负面情绪。
-                    </p>
-                    <span class="d-flex justify-content-center"></span>
-                    <p class="m-auto line-height-3">
-                        在华留学生不仅是文化交流的使者，也是中华文化的传播者。我们期待通过心灵的碰撞，能够更好地通过在华留学生群体，传播中华文化，让更多的人了解和理解中国。
-                        通过开展相关活动，让留学生们能够深入学习和体验中华文化。通过阅读中国经典文献，参加各类文化活动，学习中国传统艺术和技艺等方式，深入理解和体验中华文化。将真实的、有深度的中华文化传播给世界。
-                        其次，我们希望留学生们能够用自己的语言和方式，将中华文化传播给世界。利用社交媒体平台，分享自己在中国的生活和学习经历，让更多的人了解中国。同时，他们也可以通过自己的行动，展示中华文化的价值观和精神风貌，让更多的人感受到中华文化的魅力。
-                        中华文化博大精深，以开放和包容的态度，面对文化的差异和冲突，才能有效传播中华文化。尊重和理解不同文化的存在和发展，以平等和互信的态度，让不同的文化交流碰撞。这样，才能最大程度发挥在华留学生传播中华文化的作用，真正成为文化交流的使者和桥梁，促进不同文化之间的交流和理解。
-                    </p>
-                </div>
-                <!-- 移动端内容 -->
-                <div class="mobile-content">
-                    <p class="m-auto line-height-3">
-                        随着全球疫情的逐渐控制，在华留学生的生活也将逐渐恢复正常。
-                        在疫情期间，很多留学生不得不在自己的国家进行线上学习，与老师和同学们进行远程交流。这种形式的交流虽然能够维持学习的进行，但是却无法取代面对面的交流和互动。
-                        在后疫情时代，我们希望在华留学生能够更加积极地参与到跨文化交际中来。在学习和生活中，他们可以主动与来自不同国家和地区的人交流，了解不同的文化和思维方式。这不仅可以拓宽视野，还可以提高跨文化交际的能力。
-                        同时，我们希望留学生们能够借助疫情期间的经验，探索新的跨文化交际方式。
-                        例如，可以通过线上交流平台，组织跨文化交流活动，让更多人参与到其中来。还可以利用社交媒体等工具，建立跨文化的社群，促进不同文化之间的交流和互动。
-                        在跨文化交际领域，我们还需要加强对留学生的心理支持和辅导。很多留学生面临着各种压力和挑战，如孤独、焦虑、抑郁等。因此，需要提供适当的心理支持和辅导，帮助他们更好地适应新环境，缓解压力和负面情绪。
-                    </p>
-                    <span class="d-flex justify-content-center"></span>
-                    <p class="m-auto line-height-3">
-                        在华留学生不仅是文化交流的使者，也是中华文化的传播者。我们期待通过心灵的碰撞，能够更好地通过在华留学生群体，传播中华文化，让更多的人了解和理解中国。
-                        通过开展相关活动，让留学生们能够深入学习和体验中华文化。通过阅读中国经典文献，参加各类文化活动，学习中国传统艺术和技艺等方式，深入理解和体验中华文化。将真实的、有深度的中华文化传播给世界。
-                        其次，我们希望留学生们能够用自己的语言和方式，将中华文化传播给世界。利用社交媒体平台，分享自己在中国的生活和学习经历，让更多的人了解中国。同时，他们也可以通过自己的行动，展示中华文化的价值观和精神风貌，让更多的人感受到中华文化的魅力。
-                        中华文化博大精深，以开放和包容的态度，面对文化的差异和冲突，才能有效传播中华文化。尊重和理解不同文化的存在和发展，以平等和互信的态度，让不同的文化交流碰撞。这样，才能最大程度发挥在华留学生传播中华文化的作用，真正成为文化交流的使者和桥梁，促进不同文化之间的交流和理解。
-                    </p>
-                </div>
+                <p class="m-auto line-height-3">
+                    党的十八大以来，习近平总书记多次就来华留学工作作出指示批示并多次致信来华留学生，充分体现了党中央对新时代来华留学工作的亲切关怀，对国内外来华留学战线的肯定和激励。<br/>
+                    2020年5月17日，习总书记给北京科技大学全体巴基斯坦留学生回信时，提到对在华留学生的期望，希望留学生们多了解中国、多向世界讲讲所看到的中国。<br/>
+                    2021年6月，习近平总书记给北京大学的留学生们回信，希望外国留学生多了解中国、多向世界讲讲他们所看到的中国。<br/>
+                    2024年1月17日，习总书记复信北京交通大学的肯尼亚留学生及校友代表，鼓励他们继续为中肯和中非友好事业发光发热。在信中，习近平总书记提到中肯友谊源远流长，共建“一带一路”倡议将中肯发展振兴的理想变为现实，将两国人民的福祉紧密相连。习近平主席强调，展望未来，“一带一路”的壮丽画卷和中肯全面战略合作伙伴关系的宏伟蓝图需要包括留学生们在内的更多有为青年来实现。留学生因这条“幸福路”与中国结缘，成为中肯和中非友好合作的见证者、受益者，更是建设者和传播者。他希望留学生们学好专业知识，赓续传统友谊，投身两国合作，讲好中非友好故事，为推动构建高水平中非命运共同体作出更大贡献。
+                </p>
+                <span class="d-flex justify-content-center"></span>
+                <p class="m-auto line-height-3">
+                    随着全球疫情的逐渐控制，在华留学生的生活也将逐渐恢复正常。
+                    在疫情期间，很多留学生不得不在自己的国家进行线上学习，与老师和同学们进行远程交流。线上形式的交流虽能够维持学习的进行，但却无法取代面对面的交流与互动。<br/>
+                    <br/>
+                    在全球疫情逐渐受到控制的背景下，对于在华留学生而言，生活正逐渐恢复正常。在此过程中，我们必须认识到在来华留学生在重返线下，回到校园所经历的挑战与困难。<br/>
+                    <br/>
+                    观之于此，首先需关注留学生在华学习和生活中所面临的实际问题。诸如留学生在华期间所面临的身份认证、银行开户、网络支付绑卡等问题仍阻扰着在华留学生的生活环境。
+                    对于现在可以返回线下交流的留学生而言，这是一个重要的转折点。但于此同时也遇到了相应的困难。
+                    政协常委贾庆国在今年两会上提出相关建议，其在《关于加大吸引外国学生来华学习力度的提案》和《关于鼓励民间对外讲好中国故事工作的提案》中提及，在讨论外国学生在华学习和生活的实际问题时提出了相关建议。
+                    他强调，外国留学生在华期间遇到的诸如身份认证、银行开户、网络支付绑卡等困难亟需解决，以优化他们的学习和生活环境。<br/>
+                    <br/>
+                    另需言之，在后疫情时代，我们希望在华留学生能够更加积极地参与到跨文化交际中来。在学习和生活中，他们可以主动与来自不同国家和地区的人交流，了解不同的文化和思维方式。这不仅可以拓宽视野，还可以提高跨文化交际的能力。
+                    同时，我们希望留学生们能够借助疫情期间的经验，探索新的跨文化交际方式。
+                    例如，可以通过线上交流平台，组织跨文化交流活动，让更多人参与到其中来。还可以利用社交媒体等工具，建立跨文化的社群，促进不同文化之间的交流和互动。
+                    在跨文化交际领域，我们还需要加强对留学生的心理支持和辅导。很多留学生面临着各种压力和挑战，如孤独、焦虑、抑郁等。因此，需要提供适当的心理支持和辅导，帮助他们更好地适应新环境，缓解压力和负面情绪。
+                </p>
+                <span class="d-flex justify-content-center"></span>
+                <p class="m-auto line-height-3">
+                    在华留学生不仅是文化交流的使者，也是中华文化的传播者。我们期待通过心灵的碰撞，能够更好地通过在华留学生群体，传播中华文化，让更多的人了解和理解中国。
+                    通过开展相关活动，让留学生们能够深入学习和体验中华文化。通过阅读中国经典文献，参加各类文化活动，学习中国传统艺术和技艺等方式，深入理解和体验中华文化。将真实的、有深度的中华文化传播给世界。
+                    其次，我们希望留学生们能够用自己的语言和方式，将中华文化传播给世界。利用社交媒体平台，分享自己在中国的生活和学习经历，让更多的人了解中国。同时，他们也可以通过自己的行动，展示中华文化的价值观和精神风貌，让更多的人感受到中华文化的魅力。
+                    中华文化博大精深，以开放和包容的态度，面对文化的差异和冲突，才能有效传播中华文化。尊重和理解不同文化的存在和发展，以平等和互信的态度，让不同的文化交流碰撞。这样，才能最大程度发挥在华留学生传播中华文化的作用，真正成为文化交流的使者和桥梁，促进不同文化之间的交流和理解。
+                </p>
             </div>
             <div id="chapter-4-bottom"></div> <!-- 底部 -->
             <div class="padding-bottom"></div>
@@ -710,14 +695,15 @@
                         <p class="m-auto line-height-3">
                             《跨文化交际视野下的在京高校留学生认知与适应效果的实况研究》
                         </p>
-                        <p class="m-auto line-height-3">
-                            大创项目相关数据收集仍在进行中，后续将不定期更新完善。
-                        </p>
                         <span class="d-flex justify-content-center"></span>
                         <p class="m-auto line-height-3">小组成员：夏荣鑫 张斐 谢建双</p>
                         <p class="m-auto line-height-3">数据收集：夏荣鑫 张斐</p>
                         <p class="m-auto line-height-3">网站制作：谢建双</p>
-                        <p class="m-auto line-height-3">数据来源：</p>
+                        <span class="d-flex justify-content-center"></span>
+                        <p class="m-auto line-height-3">资料引用：</p>
+                        <p class="small m-auto line-height-3">
+                            [1]澎湃新闻.来华留学生群像：从哪来，学什么，花谁的钱？[EB/OL].https://www.thepaper.cn/newsDetail_forward_4094168,2019-08-06.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -740,6 +726,8 @@
 
 <!-- 自定义图表 -->
 <script src="data/area.js"></script>
+<script src="data/trend.js"></script>
+<script src="data/continent-2022-treemap-sunburst.js"></script>
 
 <!-- 图表1初始化 -->
 <script type="text/javascript">
