new file:   data/qcontinent.js 	new file:   data/qcountry.js 	modified:   index.html 	modified:   style_preset.css

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
             </p>
             <!-- 条形图 -->
             <div class="col-md-6 chart-center" id="container-trend"></div>
-            <p class="small text-margin-bottom line-height-3">
-                数据来源：《中国教育统计年鉴》（2012-2022）
+            <p class="small m-auto line-height-3">
+                数据来源：《中国教育统计年鉴》（2012-2022）<br><br>
             </p>
             <p class="m-auto line-height-3">
                 其中亚洲国家占比最高，达到66.9%。
@@ -203,8 +203,8 @@
                 其次为非洲，占比为22.5%，<br>成为既亚洲之外的第二大来华留学输出地。
             </p>
             <div class="col-md-6 chart-center" id="container-treemap"></div>
-            <p class="small text-margin-bottom line-height-3">
-                数据来源：《中国教育统计年鉴》（2022）
+            <p class="small m-auto line-height-3">
+                数据来源：《中国教育统计年鉴》（2022）<br><br>
             </p>
             <!-- 电脑端内容 -->
             <div class="desktop-content">
@@ -298,31 +298,13 @@
                 <div class="text-center">
                     <!-- 这里需要一张图表 -->
                     <div class="chart-center" id="chart_2"></div>
-                    <!-- 分栏图表 -->
-                    <div class="row mx-4-fit">
-                        <div class="col-md-6 col-lg-4 m-b-50 filter-item">
-                            <div class="chart-col-md6 single-gallery">
-                                <div class="chart-md6 gallery-thumb" id="4e3788a5-2875-40dd-88a8-a5e45b5d19c8"
-                                    style="max-height: 300px;"></div>
-                                <p class="inner-text m-auto line-height-3">
-                                    他们带着好奇心，<br>探索着这个拥有悠久历史、灿烂文化的国度。<br>成为国际文化交流的关键推动力。
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4 m-b-50 filter-item">
-                            <div class="chart-col-md6 single-gallery">
-                                <div class="chart-md6 gallery-thumb" id="7c105b7e-38ea-423d-8161-31c8b2cf59f0">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <span class="d-flex justify-content-center"></span>
                 </div>
 
                 <!-- 电脑端内容 -->
                 <div class="desktop-content">
                     <p class="m-auto line-height-3">
-                        我们对北京高校的在华留学生展开了问卷调查，问题主要集中于留学生的跨文化适应。根据调查，<br>约有 60%
+                        根据调查，约有 60%
                         的受访者表示在中国学习期间，他们遇到了适应中国的教育和学习方法方面的困难，<br>包括对不同的教学风格、考核方式和学术文化的不熟悉。
                     </p>
 
@@ -726,7 +708,8 @@
 <!-- Echarts-->
 <script type="text/javascript" src="https://assets.pyecharts.org/assets/v5/echarts.min.js"></script>
 <!-- Plotly -->
-<script src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="utf-8"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 <!--Main JS-->
 <script src="main.js"></script>
 <script src="assets/js/main.js"></script>
@@ -735,6 +718,10 @@
 <script src="data/area.js"></script>
 <script src="data/trend.js"></script>
 <script src="data/continent-2022-treemap-sunburst.js"></script>
+<script src="data/qcontinent.js"></script>
+<script src="data/qcountry.js"></script>
+
+
 
 <!-- 图表2初始化 -->
 <script type="text/javascript">
