modified:   index.html 	modified:   index_en.html 	modified:   index_es.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="title-text">
             <span class="title-text-large">“跨界”<br>使者</span>
             <p style="height: 20px;"></p>
-            <span class="title-text-secondary">跨文化视野下的在华留学生调查</span>
+            <span class="title-text-secondary">跨文化视野下的在京留学生调查</span>
         </div>
     </div>
     <!-- Title Section End -->
@@ -247,6 +247,7 @@
         <div class="padding-bottom"></div>
     </div>
     </div>
+
     <!-- 第二章 -->
     <div class="section bgimg-2" id="chapter-2">
         <!-- 标题 -->
