modified:   index.html 	modified:   index_en.html 	modified:   index_es.html

--- a/index_es.html
+++ b/index_es.html
@@ -880,9 +880,9 @@
                         <span class="d-flex justify-content-center"></span>
                         <p class="m-auto line-height-3">Referencias:</p>
                         <p class="small m-auto line-height-3">
-                            [1]光明网.2022年来华留学相关盘点[EB/OL].https://epaper.gmw.cn/lx/html/2022-12/20/nw.D110000lx_20221220_3-05.htm,2022-12-20.<br>
-                            [2]澎湃新闻.来华留学生群像：从哪来，学什么，花谁的钱？[EB/OL].https://www.thepaper.cn/newsDetail_forward_4094168,2019-08-06.<br>
-                            [3]人民网.陈宝生代表：中国已成为世界第三、亚洲最大留学目的地国[EB/OL].http://cpc.people.com.cn/19th/n1/2017/1022/c414536-29601699.html,2017-10-22.<br>
+                            [1]光明网.2022年来华留学相关盘点[EB/OL].<br>https://epaper.gmw.cn/lx/html/2022-12/20/nw.D110000lx_20221220_3-05.htm,2022-12-20.<br>
+                            [2]澎湃新闻.来华留学生群像：从哪来，学什么，花谁的钱？[EB/OL].<br>https://www.thepaper.cn/newsDetail_forward_4094168,2019-08-06.<br>
+                            [3]人民网.陈宝生代表：中国已成为世界第三、亚洲最大留学目的地国[EB/OL].<br>http://cpc.people.com.cn/19th/n1/2017/1022/c414536-29601699.html,2017-10-22.<br>
                         </p>
                     </div>
                 </div>
